# cmocka_mocks

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONFIG.ini  Jenkinsfile  README.md
ci/: Dockerfile  build.sh  build_doc.sh  checklicense.sh  clean.sh  code_lint.py  create_debian_release.sh  dependencies_default.json  dependencies_emlix.json  docker-run.sh  install_deps.py  updateversion.sh
cmake/: ConfigureLibrary.cmake  Packing.cmake  index.rst  project.cmake
debian/: .gitignore  changelog  cmocka-mocks-doc.install  control  gbp.conf  libcmocka-mocks-dev.install  libcmocka-mocks0.install  libmock-libc0.install  libmock-libmnl0.lintian-overrides  libmock-openssl0.lintian-overrides  rules  watch
debian.native/: .gitignore  README.md  changelog  cmocka-mocks-doc.lintian-overrides  control  copyright  libmock-jsonc0.install  libmock-libmnl0.install  libmock-openssl0.install  libmock-openssl0.lintian-overrides  watch
src/mock_jsonc/: mock_jsonc.c
src/mock_jsonc/include/cmocka_mocks/: mock_jsonc.h
src/mock_libc/: CMakeLists.txt  mock_libc.c
src/mock_libc/include/cmocka_mocks/: mock_libc.h
src/mock_libmnl/: mock_libmnl.c
src/mock_libmnl/include/cmocka_mocks/: mock_libmnl.h
src/mock_openssl/: mock_openssl.c
src/mock_openssl/include/cmocka_mocks/: mock_openssl.h
